package work7;

/**
 * Represents a command interface.
 * Defines the {@code execute()} method to perform an action.
 */
public interface Command {
    /**
     * Executes the action defined by the command.
     */
    void execute();
}
